# EspFlight

./: .gitignore  CMakeLists.txt  README.md  debug_log.md  pin_def.md  sdkconfig  sdkconfig.old
components/algorithm/: CMakeLists.txt  EF_math.cpp  EF_math.h  controller.c  fir_filter.c  kalman.c  kalman.cpp  kalman.h  mahony.c  pid.c  quaternion.c
components/algorithm/include/: controller.h  fir_filter.h  kalman.h  mahony.h  pid.h  quaternion.h
components/device/: CMakeLists.txt  motor_pwm.c
components/device/include/: controller.h  motor_data_types.h  motor_pwm.h
components/drivers/: CMakeLists.txt  bmp180.c  drivers.cpp  drivers.h  hmc5883l.c  i2c_manager.c  mpu6050.c  pwm_manager.c  time_manager.c
components/drivers/include/: bmp180.h  bmp280.h  hmc5883l.h  i2c_manager.h  mpu6050.h  pwm_manager.h  sbus_manager.h  time_manager.h
components/powertrain/: CMakeLists.txt
components/powertrain/include/: bldc.h  motor_data_types.h
components/sensors/: CMakeLists.txt  bmi270.c  bmi270.cpp  bmi270.h  bmi270_config.c  bmp280.c  bmp280.cpp  bmp280.h  mpu6050.cpp  mpu6050.h  sensor_data_types.c
components/sensors/include/: bmi270.h  bmi270_config.h  bmp280.h  sensor_data_type.h  sensor_data_types.h
components/utils/: CMakeLists.txt  debug_utils.c  generic_utils.c  matrix_utils.c  matrix_utils.cpp  quaternion_utils.cpp
components/utils/include/: debug_utils.h  eigen_types.hpp  generic_utils.h  matrix_utils.h  quaternion_utils.h  sensor_data_types.h
main/: CMakeLists.txt  main.c  main.cpp
main/component_tests/: wifi_test.c
